--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation 'pub.devrel:easypermissions:0.2.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0'
 }
