--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.rohit.pg">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -14,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.renti_list_view"></activity>
+        <activity android:name=".activity.image_show"></activity>
+        <activity android:name=".activity.show_details" />
+        <activity android:name=".activity.renti_list_view" />
         <activity android:name=".activity.rentee_registration" />
         <activity android:name=".activity.Main_page">
             <intent-filter>
